--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="us.julesandremi.seismic">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true" android:icon="@mipmap/ic_tsunami"
         android:label="@string/app_name" android:roundIcon="@mipmap/ic_tsunami"
-        android:supportsRtl="true" android:theme="@style/AppTheme">
+        android:supportsRtl="true" android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".MainActivity" android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
     </application>
